New intro: lead with typography
It's a much more interesting hook than talking about markup.

--- a/hello.tex
+++ b/hello.tex
@@ -182,7 +182,7 @@ The full list of special characters is:
 \end{lstlisting}
 \end{leftfigure}
 All have corresponding commands
-if you want to make them appear in your document.
+if you want to make them appear in your document:
 \begin{leftfigure}
 \begin{lstlisting}
 \# \$ \% \^{} \& \_ \{ \} \~{} \textbackslash
