Punctuation: A vital part of _any_ writing

--- a/punctuation.tex
+++ b/punctuation.tex
@@ -5,7 +5,7 @@ You would much rather encounter a panda that eats
 shoots and leaves than one that eats, shoots,
 and leaves.\punckern\endnote{Lynne Truss,
 \textit{Eats, Shoots \& Leaves} (New York, 2003)}
-Punctuation is a vital part of good writing,
+Punctuation is a vital part of writing,
 and there's more to it than your keyboard suggests.
 
 \section{Quotation marks}
