Punctuation: Avoid repeating example intro

--- a/punctuation.tex
+++ b/punctuation.tex
@@ -122,7 +122,7 @@ For these, we use \verb|\,|:
 Launch in 2\,h 10\,m.
 \end{lstlisting}
 \end{leftfigure}
-produces
+announces
 \begin{leftfigure}
 \lm%
 Launch in 2\,h 10\,m.
