--- a/history.tex
+++ b/history.tex
@@ -56,8 +56,8 @@ invented a device-independent format, \acronym{dvi}.
 Scalable fonts were uncommon at the time, so Knuth created a system,
 \MF, to rasterize his characters into dots on the
 page.\punckern\footnote{In some ways,
-\MF{} is more impressive than the PostScript system that
-underpins modern TrueType and OpenType font files.
+\MF{} is more impressive than most of the TrueType and OpenType fonts
+we use today.
 Instead of constructing characters from lines and curves,
 \MF{} uses strokes of virtual pens.
 By tweaking the parameters of these pens and strokes, one can build entire
