--- a/micro.tex
+++ b/micro.tex
@@ -59,8 +59,8 @@ You might think that distorting character shapes this way would be immediately
 noticeable to the reader,
 but you're reading a book that does this on every page!
 Font expansion is applied \emph{very} slightly---by default,
-character widths are changed by no more than 2\%.\punckern\footnote{Of course,
-you can use package options to change this limit,
+character widths are changed by no more than two percent.\punckern\footnote{%
+Of course, you can use package options to change this limit,
 or disable the feature entirely.}
 
 Note that this feature isn't currently available with \XeLaTeX{}.
