More intro work

--- a/why.tex
+++ b/why.tex
@@ -7,25 +7,27 @@ for a few short minutes of it.
 To put ideas into the world,
 nothing is more important than catching and holding
 the attention of your audience.
-Typography is a tool to do so---a good design doesn't ``look nice''
-only for the sake of art---it draws readers in.\punckern\endnote{Matthew Butterick,
+Typography is a tool to do so---a good design doesn't just ``look nice''
+for the sake of art---it draws readers in.\punckern\endnote{Matthew Butterick,
 ``Typography for Docs''
 (presented at the Write The Docs Conference, April 8, 2013),
 \url{https://www.youtube.com/watch?v=8J6HuvosP0s}}
 %Matthew Butterick's \textit{Practical Typography} calls it
 %``the visual component of the written word.\quotekern''
-It sets their expectations and establishes a subliminal ``brand'' for your
+It sets their expectations and establishes a subliminal brand for your
 work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
 (presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014),
 \url{https://www.youtube.com/watch?v=ggQpDu63kk0}}
-It's the \emph{how} of text.
 \begin{leftfigure}
 \fontspec{TeX Gyre Termes}\fontsize{12pt}{24pt}\selectfont\raggedright
-Typography is why this reminds you of the terrible essays
+Typography is why this reminds you of terrible essays
 you wrote in school.
-Would you like to read an entire book this way?
+Do you see many books that look like this?
+Why do you think that might be?
 \end{leftfigure}
-It is why
+\medskip
+
+\noindent It is why
 \begin{leftfigure}
 \noindent\fontspec{FuturaCon-ExtBol}\Large DO IT LATER
 \end{leftfigure}
@@ -37,16 +39,15 @@ or how
 FIRST SET FOOT UPON THE MOON \\
 JULY 1969, A.~D.
 \end{center}
-Typography shows people
-what you have to say before they read a single word.
 
-If you're serious about this sort of stuff, you should try \LaTeX,
-a program\footnote{And a markup language,
+If you care about more than \emph{what} you tell your readers, but \emph{how}
+you tell it, you should try \LaTeX.
+It's program\footnote{And a markup language,
 and (sort of) a programming language, and a bit of a cult.
 But that's all for later.}
 for crafting written documents, like papers, presentations,
 or even the book you're reading right now.
-Unless you want to give Adobe large sums
+And unless you want to give Adobe large sums
 of money for InDesign or InCopy,
 you won't find any better typesetting software.
 By carefully handling subtle details,
