roman type, not Roman type.

--- a/back.tex
+++ b/back.tex
@@ -61,7 +61,7 @@ Available (for free!) at \url{https://practicaltypography.com}
 {\let\cleardoublepage\clearpage \chapter{Colophon}}
 
 This guide was typeset with \LuaLaTeX{} in Garamond Premier by Robert Slimbach.
-His revival is based on Roman type by
+His revival is based on roman type by
 \otford{16}{th} century French
 punchcutter Claude Garamond.
 Italics are inspired by the work of Garamod's contemporary Robert Granjon.
