Remove unneeded noindents

--- a/why.tex
+++ b/why.tex
@@ -29,13 +29,13 @@ Why do you think that might be?
 
 \noindent It is why
 \begin{leftfigure}
-\noindent\fontspec{FuturaCon-ExtBol}\Large DO IT LATER
+\fontspec{FuturaCon-ExtBol}\Large DO IT LATER
 \end{leftfigure}
 seems oddly reminiscent of a certain shoe company's advertising,
 or how
 \begin{center}
 \fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Med}
-\noindent MEN FROM THE PLANET EARTH \\
+MEN FROM THE PLANET EARTH \\
 FIRST SET FOOT UPON THE MOON \\
 JULY 1969, A.~D.
 \end{center}
