Fiddle with intro some more
This time it's great. Definitely.

--- a/why.tex
+++ b/why.tex
@@ -2,14 +2,16 @@
 \label{typography}
 
 Modern life is a constant battle for your time---every day,
-dozens of ads, apps, emails, sites, and texts fight
+dozens of ads, apps, clips, emails, sites, shows, and texts fight
 for a few short minutes of it.
 To put ideas into the world,
 nothing is more important than catching and holding
 the attention of your audience.
-Typography is a tool to do so---a good design doesn't just ``look nice''
-for the sake of art---it draws readers in.\punckern\endnote{Matthew Butterick,
-``Typography for Docs''
+When we write, we don't just reach readers with the words we use.
+We reach them with \introduce{typography}: how those words look.
+Good design doesn't ``look nice''
+only for the sake of art---it draws readers
+in.\punckern\endnote{Matthew Butterick, ``Typography for Docs''
 (presented at the Write The Docs Conference, April 8, 2013),
 \url{https://www.youtube.com/watch?v=8J6HuvosP0s}}
 %Matthew Butterick's \textit{Practical Typography} calls it
