Another read-through

--- a/back.tex
+++ b/back.tex
@@ -8,8 +8,8 @@
 
 As promised at the start, this book is incomplete.
 To keep things short,
-entire \LaTeX{} features---like figures, captions, references,
-and graphics---haven't been mentioned.
+entire \LaTeX{} features---like figures, captions, and graphics---haven't
+been mentioned.
 Use some of these resources to fill in the gaps,
 or as more thorough references:
 
