--- a/installation.tex
+++ b/installation.tex
@@ -25,7 +25,7 @@ Each major operating system has its own \LaTeX{} distribution:
     Mik\TeX{} offers the ability to automatically find and download additional
     packages if your document uses one that isn't currently on your computer.
 
-\item[Linux and BSD] usually use \TeX{} Live.
+\item[Linux and BSD] use \TeX{} Live.
     Like most software, this is often provided through your
     \acronym{os}'s package manager.
     Use yours to install \monobox{texlive-core},
