--- a/math.tex
+++ b/math.tex
@@ -1,4 +1,5 @@
 \chapter{Mathematics}
+\label{math}
 
 \LaTeX{} is excellent at typesetting mathematics, both inline with body text,
 e.g., $x_n^2+y_n^2=r^2$, and as standalone formulas:
@@ -7,7 +8,7 @@ The former is created with \verb|$...$| or \verb|\(...\)|,
 and the latter with \verb|\[...\]|.
 Inside these math environments, the rules of \LaTeX{} change:
 \begin{itemize}
-\item Most spaces and line breaks are ignored completely,
+\item Most spaces and line breaks are ignored,
     and the engine usually makes spacing decisions for you based on
     typographical conventions for mathematics.
     \verb|$x+y+z$| and \verb|$x + y + z$| both give you $x+y+z$.
