--- a/micro.tex
+++ b/micro.tex
@@ -54,7 +54,7 @@ characters into the margins to compensate.
 To assist \LaTeX's justification algorithm,
 \texttt{microtype} can
 stretch or shrink characters horizontally to produce a layout
-with more even spacing or fewer hyphenated lines.
+with more even spacing and fewer hyphenated lines.
 You might think that distorting character shapes this way would be immediately
 noticeable to the reader,
 but you're reading a book that does this on every page!
