--- a/textformatting.tex
+++ b/textformatting.tex
@@ -41,9 +41,9 @@ A (mostly) complete list follows:
 \hline
 \verb|\textnormal{...}| & \verb|{\normalfont ...}| & the default \\
 \verb|\emph{...}| & \verb|{\em ...}| & \emph{emphasis, typically italics} \\
-\verb|\textrm{...}| & \verb|{\rmfamily ...}| & Roman (serif) type \\
+\verb|\textrm{...}| & \verb|{\rmfamily ...}| & roman (serif) type \\
 \verb|\textsf{...}| & \verb|{\sffamily ...}| & {\fontspec{Latin Modern Sans}sans serif type} \\
-\verb|\texttt{...}| & \verb|{\ttfamily ...}| & {\fontspec[Ligatures=TeX]{Latin Modern Mono}``teletype'' (monospace)} \\
+\verb|\texttt{...}| & \verb|{\ttfamily ...}| & {\fontspec[Ligatures=TeX]{Latin Modern Mono}``teletype'' (monospaced)} \\
 \verb|\textit{...}| & \verb|{\itshape ...}| & \textit{italics} \\
 \verb|\textsl{...}| & \verb|{\slshape ...}| & {\fontspec{Latin Modern Roman Slanted}slanted, or oblique type} \\
 \verb|\textsc{...}| & \verb|{\scshape ...}| & \textsc{Small Capitals} \\
