--- a/why.tex
+++ b/why.tex
@@ -131,11 +131,11 @@ However, it comes with a few advantages:
     \begin{itemize}
     \item It can be read and understood with any text editor.
     \item A document's structure is immediately visible
-        and can be easily replicated.\footnote{Compare this to
+        and easily replicated.\punckern\footnote{Compare this to
         \acronym{wysiwyg} systems, where it is often unobvious
         how certain formatting was produced or how to replicate it.}
-    \item Content can be easily generated programmatically.
-    \item Changes are easily tracked with version control software.
+    \item Content can be generated programmatically.
+    \item You can track changes with standard version control software.
     \end{itemize}
 \end{enumerate}
 
@@ -168,7 +168,7 @@ obsolete---multiple times---is a testament to its staying power.}
 
 The good news is that  \LaTeX{} has improved by leaps and bounds in recent years.
 It's time for a guide that doesn't weigh you down with decades of legacy
-or try to be some comprehensive reference.
+or try to be a comprehensive reference.
 After all, you're a smart, resourceful individual who knows how to use a search
 engine.
 This book will:
