--- a/hello.tex
+++ b/hello.tex
@@ -12,13 +12,13 @@ Hello, World!
 \end{document}
 \end{lstlisting}
 \end{leftfigure}
-We then run this file through \LaTeX{} (the program)\footnote{Not to be
+Next, we run this file through \LaTeX{} (the program)\footnote{Not to be
 confused with \LaTeX{} the lunchbox, \LaTeX{} the breakfast cereal,
 or \LaTeX{} the flamethrower. The kids love this stuff!}
 to get our document.
 The installation places several different versions---or
 \introduce{engines}---on your machine,
-but for the entire book, we'll always use \LuaLaTeX{} or \XeLaTeX.
+but for this entire book, we'll always use \LuaLaTeX{} or \XeLaTeX.
 These are the newest engines available---see Appendix~\ref{history} for an
 explanation of how they differ from the others.
 
@@ -55,14 +55,14 @@ you just created your first document!
 
 Let's unpack what we did.
 All \LaTeX{} documents begin with a \verb|\documentclass| declaration,
-which picks a style to use.
+which picks a base ``style'' to use.
 Many classes are available---and you can even create your own---but common
 ones include \texttt{article}, \texttt{report}, \texttt{book},
 and \texttt{beamer}.\punckern\footnote{This last one is for slideshows.
 Kind of an odd name, no?}
 For your average document, \texttt{article} is probably a good choice.
-Next is, \verb|% Say hello|.
-This is a \introduce{comment}---anything placed after a percent symbol on a line
+The next line, \verb|% Say hello|,
+is a \introduce{comment}---anything placed after a percent symbol on a line
 is ignored by the engine,
 so we can use \verb|%| to leave notes about what's going on to anybody reading
 the document's source.\punckern\footnote{Including, perhaps most importantly,
@@ -93,7 +93,7 @@ is true for sentences.
 
 An empty line  starts a new paragraph.
 \end{leftfigure}
-Notice that \LaTeX{} is automatically following typographic
+Notice that \LaTeX{} automatically follows typographic
 conventions, such as indenting new paragraphs and leaving more space after a
 period than it leaves between words.
 One quirk to be aware of is that comments ``eat'' all of the leading
@@ -121,7 +121,7 @@ contain only letters, and are case-sensitive.\punckern\footnote{%
 is different from \texttt{\textbackslash Foo}, for example.}
 Some commands require parameters, or \introduce{arguments}---\verb|\documentclass|,
 for example, needs to know which document class we want.
-These arguments are enclosed in subsequent pairs of braces,
+Arguments are enclosed in subsequent pairs of braces,
 so if some command needed two arguments, we would type:
 \begin{leftfigure}
 \begin{lstlisting}
@@ -194,7 +194,7 @@ will produce
 \end{leftfigure}
 Regardless of what comes after them, you must always add braces to
 the caret (\,\texttt{\^{}}\,) and tilde (\,\~{}\,).
-This is a relic from days when these characters were used to produce
+This is a relic from days when these commands were also used to produce
 \introduce{diacritical marks}:
 once upon a time, users had to typeset ``jalapeño'' as
 \verb|jalape\~no|.
@@ -223,9 +223,9 @@ automatically is one of \LaTeX{}'s best skills.
 
 \section{Environments}
 
-We often control our document by organizing text into \introduce{environments}.
+We often format text in \LaTeX{} by placing it into \introduce{environments}.
 These always start with \verb|\begin{name}| and conclude with \verb|\end{name}|,
-where \texttt{name} is that of the environment.
+where \texttt{name} is that of the desired environment.
 Take \texttt{quote}, which adds additional spacing on both sides of a block
 quotation:
 \begin{leftfigure}
